# tcpparser

./: .coveragerc  .isort.cfg  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tcpparser-runner.py  tox.ini
docs/: conf.py  index.rst
tcpparser/: cli.py  constants.py  environment.py  exceptions.py  network.py  prompt.py  skeleton.py  utils.py
tests/: conftest.py  test_cli.py  test_environment.py  test_prompt.py  test_skeleton.py  test_utils.py
