# pyproject.toml tells build tools (like pip and build) what is required to build this project.

[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# See configuration details in https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.black]
skip-string-normalization = true
line-length = 88
target-version = 'py38'

[project.scripts]
tcpparser = "tcpparser.cli:main"
