# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = tcpparser
description = A Python /proc/net/tcp parser with something else
author = Bruno Criado
author_email = brunocriado@gmail.com
license = MIT
license_files = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/brunocriado/tcpparser
project_urls =
    Documentation = https://tcpparser.readthedocs.io/
    Source = https://github.com/brunocriado/tcpparser
    Changelog = https://github.com/brunocriado/tcpparser/CHANGELOG.rst
    Tracker = https://github.com/brunocriado/tcpparser/issues

platforms = Linux

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

keywords =
    tcpparser
    /proc/net/tcp
    port scan
    iptables

[options]
zip_safe = False
packages = tcpparser
include_package_data = True

python_requires = >=3.8

install_requires =
    importlib-metadata
    prometheus-client>=0.12.0


[options.packages.find]
where = tcpparser
exclude =
    tests

testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    tcpparser = tcpparser.cli:main

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.1.1
package = tcpparser
extensions =
    pre_commit
